--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,4 +24,7 @@
   html {
     font-family: 'Didact Gothic', sans-serif;
   }
+  a{
+    @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600
+  }
 }
