--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,4 +24,26 @@
   html {
     font-family: 'Didact Gothic', sans-serif;
   }
+  details > summary {
+    @apply text-periwinkle;
+    cursor: pointer;
+    list-style: none;
+    font-size: 1.2rem;
+  }
+  details > summary::-webkit-details-marker {
+    display: none;
+  }
+  summary::after {
+    float: right;
+    content: '+';
+    font-size: 2rem;
+    line-height: 1.5rem;
+    overflow: hidden;
+  }
+  details[open] summary::after {
+    float: right;
+    content: '\2212';
+    font-size: 2rem;
+    line-height: 1.5rem;
+  }
 }
