--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,4 +47,25 @@
     line-height: 1.5rem;
   }
   
+  /* scrollbar */
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-darkPeriwinkle;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-darkPeriwinkle;
+  }
 }
